Render list of books in library

--- a/src/dragon/page/templates/page/library.html
+++ b/src/dragon/page/templates/page/library.html
@@ -8,7 +8,7 @@
 <a href="/">Home</a><br/>
 <h3>Books</h3>
 <ul>
-    {% for book in library %}
+    {% for book in books %}
     <li>{{ book.title }}</li>
     {% endfor %}
 </ul>
