Added members app to handle users Added game detail page with delete game form Library displays weather the item is a book or game

--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -21,7 +21,7 @@
 <div id="menucontainer">
     <div id="menu">
         <a href="/">Home</a><br>
-        <a href="/faq/">FAQ</a><br>
+        <a href="/members/">Members</a><br>
         <a href="/library/">The Library</a><br>
         <a href="/admin">Admin</a><br>
         <a href="http://webcam.ucc.asn.au/">Webcam</a><br>
