--- a/src/dragon/members/templates/members/members.html
+++ b/src/dragon/members/templates/members/members.html
@@ -4,13 +4,19 @@
 
 {% block content %}
   <h1>Members</h1>
+  <h3>List</h3>
   <table style="width:100%">
-  <tr>
+    <tr>
       <th>Name</th>
       <th>Type</th>
     </tr>
     {% for user in users %}
-
+      <tr>
+        <td>{{ user.username }}</td>
+        <td>user</td>
+      </tr>
     {% endfor %}
   </table>
+  <h3>Add user</h3>
+  <a href="{% url 'members:user_form' %}">Add User</a>
 {% endblock %}
