added .idea and __pycache__ to .gitignore and removed folders

--- a/src/dragon/dragon/static/dragon/style.css
+++ b/src/dragon/dragon/static/dragon/style.css
@@ -10,7 +10,7 @@ width:100%;
 
 
 #topbar {
-background: url("bookheader.png") #d9e6f6 repeat-x top left;
+background: url("bookheader.png") #9c0001 repeat-x top left;
 margin:0;
 padding:0;
 height: 110px;
