--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -1,42 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>{% block title %}Unigames{% endblock %}</title>
     {% load static %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'dragon/style.css' %}">
-</head>
-<body>
-
-{# bar at top #}
-<div id="topbar">
-    <a href="/">
-        <span id="logo">
-            <img src="{% static 'dragon/bi-nigames-banner3.png' %}" width="350" height="130" alt="Unigames" border="0">
-        </span>
-    </a>
-</div>
-
-{% block menu %}
-<div id="menucontainer">
-    <div id="menu">
-        <a href="/">Home</a><br>
-        <a href="/members/">Members</a><br>
-        <a href="/library/">The Library</a><br>
-        <a href="/admin">Admin</a><br>
-        <a href="http://webcam.ucc.asn.au/">Webcam</a><br>
-    </div>
-    <div id="menubottom"></div>
-</div>
-{% endblock %}
-
-<div id="bodytext">
-    {% block content %}{% endblock %}
-</div>
-
-<div id="footer">
-    <p> Not the real Unigames site</p>
-</div>
-
-</body>
+  </head>
+  <body>
+    <h1> This is not unigames </h1>
+  </body>
 </html>
