--- a/src/dragon/dragon/templates/dragon/index.html
+++ b/src/dragon/dragon/templates/dragon/index.html
@@ -3,7 +3,7 @@
 {% block title %}{{ block.super }}{% endblock %}
 
 {% block content %}
-    <h1>Home</h1>
+    <h1>Welcome to UniGames</h1>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eleifend est magna, at interdum mi condimentum at.
         Etiam elementum, quam nec laoreet dapibus, magna arcu fringilla est, condimentum bibendum erat elit nec neque.
