--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -2,15 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Unigames{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+    <script src="https://kit.fontawesome.com/985e02c2ee.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'dragon/style.css' %}">
+    {% block css %}{% endblock %}
   </head>
   <body>
-    <h1> This is not unigames </h1>
+    <!-- Main Page Header  -->
+    <div class="jumbotron" id="page-header">
+      <h1 id="header-text">Unigames</h1>
+    </div>
+    <!--  The Navbar for all pages  -->
+    <nav class="navbar navbar-expand-md bg-custom sticky-top" id="page-navbar">
+      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsible-nav">
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsible-nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/library">LIBRARY</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/members">MEMBERS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin">ADMIN</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://webcam.ucc.asn.au/">SPY ON US HERE</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container-fluid">
+    {% block content %}
+    {% endblock %}
+    </div>
   </body>
 </html>
