--- a/src/dragon/members/templates/members/members.html
+++ b/src/dragon/members/templates/members/members.html
@@ -3,6 +3,15 @@
 {% block title %}{{ block.super }} - Members{% endblock %}
 
 {% block content %}
+  <form class="form-inline my-2 my-lg-2">
+    <input class="form-control mr-sm-2"
+           type="search"
+           placeholder="Search"
+           aria-label="Search"
+           name="search"
+           value={{ searchterm }}>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
   <h1>Club Members</h1>
   <h3>List</h3>
   <table style="width:100%">
