--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -32,8 +32,14 @@
           <li class="nav-item">
             <a class="nav-link" href="/library">LIBRARY</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/members">MEMBERS</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="memberDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              MEMBERS
+            </a>
+            <div class="dropdown-menu" aria-labelledby="memberDropdown">
+              <a class="dropdown-item" href="/members/clubmembers">Club Members</a>
+              <a class="dropdown-item" href="/members/nonmembers">Non-Members</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin">ADMIN</a>
