--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -12,12 +12,12 @@
     
     <script src="https://kit.fontawesome.com/985e02c2ee.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'dragon/style.css' %}">
-    {% block css %}{% endblock %}
+    {% block page-styles %}{% endblock %}
   </head>
   <body>
     <!-- Main Page Header  -->
-    <div class="jumbotron" id="page-header">
-      <h1 id="header-text">Unigames</h1>
+    <div class="container-fluid jumbotron" id="page-header">
+      <h1 class="text-center text-md-left" id="header-text">Unigames</h1>
     </div>
     <!--  The Navbar for all pages  -->
     <nav class="navbar navbar-expand-md bg-custom sticky-top" id="page-navbar">
@@ -27,26 +27,24 @@
       <div class="collapse navbar-collapse" id="collapsible-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/">HOME</a>
+            <a class="text-center text-md-left nav-link" href="/">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/library">LIBRARY</a>
+            <a class="text-center text-md-left nav-link" href="/library">LIBRARY</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/members">MEMBERS</a>
+            <a class="text-center text-md-left nav-link" href="/members">MEMBERS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin">ADMIN</a>
+            <a class="text-center text-md-left nav-link" href="/admin">ADMIN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://webcam.ucc.asn.au/">SPY ON US HERE</a>
+            <a class="text-center text-md-left nav-link" href="http://webcam.ucc.asn.au/">SPY ON US HERE</a>
           </li>
         </ul>
       </div>
     </nav>
-    <div class="container-fluid">
     {% block content %}
     {% endblock %}
-    </div>
   </body>
 </html>
