--- a/src/dragon/dragon/static/dragon/book_detail.css
+++ b/src/dragon/dragon/static/dragon/book_detail.css
@@ -1,30 +1,81 @@
 #item-details {
     margin: 0.5rem;
-    padding: 1.5rem;
+    padding: 0.5rem;
     padding-top: 2rem;
+    padding-bottom: 2rem;
     border: 1px solid silver;
     border-radius: 0.5rem;
+}
+
+.item-img-container {
+    padding: 0;
+    margin: 0;
+    border-bottom: 1px solid silver;
 }
 
 #book-img {
     display: block;
     margin: auto;
     margin-bottom: 2rem;
-    border-radius: 1rem;
+    width: 65%;
 }
 
-#book-isbn {
-    margin: 0;
-    padding: 0;
+.item-title-container {
+    margin-top: 1rem;
+}
+
+#item-title {
+    font-size: 1.5rem;
 }
 
 .item-attributes {
     border-left: 1px solid silver;
 }
 
+.attr-header {
+    font-size: 1.25rem;
+}
+
+.attr-tags-container {
+    border: 1px solid silver;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.cat-header {
+    font-size: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.1rem;
+}
+
+#isbn-details {
+    border-bottom: 1px solid silver;
+}
+
+.cat-value {
+    font-weight: normal;
+    font-size: 1rem;
+    text-align: center;
+}
+
+#book-isbn {
+    padding-top: 0.5rem;
+}
+
+#delete-item {
+    margin: 1rem;
+    padding: 0;
+}
 
 .item-delete-message {
-    color: silver;
+    font-size: 0.75rem;
+    font-weight: normal;
+    color: grey;
+}
+
+#delete-button {
+    font-size: 0.75rem;
+    width: 10%;
 }
 
 /*  Media queries for mobile display  */
@@ -37,6 +88,32 @@
     
     .item-attributes {
         border-left: none;
+    }
+
+    .attr-tags-container {
+        border: none;
+        margin-bottom: 1rem;
+    }
+
+    #isbn-details {
+        border: none;
+    }
+
+    .attr-cell {
+        border: none;
+    }
+
+    #book-isbn {
+        padding-top: 0;
+    }
+
+    .cat-value {
+        text-align: left;
+    }
+
+    #delete-button {
+        font-size: 0.5rem;
+        width: 66.7%;
     }
 }
 
