Reformat base.html and book_detail.html

--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Main Page Header  -->
-    <div class="container-fluid jumbotron" id="page-header">
+    <div class="jumbotron" id="page-header">
       <h1 class="text-center text-md-left" id="header-text">Unigames</h1>
     </div>
     <!--  The Navbar for all pages  -->
