Added dropdown for library

--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -29,8 +29,15 @@
           <li class="nav-item">
             <a class="text-center text-md-left nav-link" href="/">HOME</a>
           </li>
-          <li class="nav-item">
-            <a class="text-center text-md-left nav-link" href="/library">LIBRARY</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-center text-md-left" href="#" id="libraryDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              LIBRARY
+            </a>
+            <div class="dropdown-menu" aria-labelledby="libraryDropdown">
+              <a class="dropdown-item text-center text-md-left" href="/library/books">Books</a>
+              <a class="dropdown-item text-center text-md-left" href="/library/games">Games</a>
+              <a class="dropdown-item text-center text-md-left" href="/library/cardgames">Card Games</a>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-center text-md-left" href="#" id="memberDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
