Linked the items.html to base.html

--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -34,6 +34,7 @@
               LIBRARY
             </a>
             <div class="dropdown-menu" aria-labelledby="libraryDropdown">
+              <a class="dropdown-item text-center text-md-left" href="/library/ALL">All Items</a>
               <a class="dropdown-item text-center text-md-left" href="/library/books">Books</a>
               <a class="dropdown-item text-center text-md-left" href="/library/games">Games</a>
               <a class="dropdown-item text-center text-md-left" href="/library/cardgames">Card Games</a>
