--- a/src/dragon/members/templates/members/clubmember_edit_form.html
+++ b/src/dragon/members/templates/members/clubmember_edit_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>Edit Club Member</h1>
-  <form action="{% url 'library:update_clubmember' clubmember.id %}" method="post">
+  <form action="{% url 'members:update_clubmember' clubmember.id %}" method="post">
     {{ form.as_p }}
     <input type="submit" value="Edit Club Member">
     {% csrf_token %}
