--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -11,7 +11,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
     <script src="https://kit.fontawesome.com/985e02c2ee.js"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'dragon/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'dragon/base_style.css' %}">
     {% block page-styles %}{% endblock %}
   </head>
   <body>
