--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -27,17 +27,17 @@
       <div class="collapse navbar-collapse" id="collapsible-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="text-center text-md-left nav-link" href="/">HOME</a>
+            <a class="text-center text-md-left nav-link" href="{% url 'index' %}">HOME</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-center text-md-left" href="#" id="libraryDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               LIBRARY
             </a>
             <div class="dropdown-menu" aria-labelledby="libraryDropdown">
-              <a class="dropdown-item text-center text-md-left" href="/library/ALL">All Items</a>
-              <a class="dropdown-item text-center text-md-left" href="/library/books">Books</a>
-              <a class="dropdown-item text-center text-md-left" href="/library/games">Games</a>
-              <a class="dropdown-item text-center text-md-left" href="/library/cardgames">Card Games</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'library:ALL' %}">All Items</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'library:books' %}">Books</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'library:games' %}">Games</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'library:cardgames' %}">Card Games</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -45,8 +45,8 @@
               MEMBERS
             </a>
             <div class="dropdown-menu" aria-labelledby="memberDropdown">
-              <a class="dropdown-item text-center text-md-left" href="/members/clubmembers">Club Members</a>
-              <a class="dropdown-item text-center text-md-left" href="/members/nonmembers">Non-Members</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'members:clubmembers' %}">Club Members</a>
+              <a class="dropdown-item text-center text-md-left" href="{% url 'members:nonmembers' %}">Non-Members</a>
             </div>
           </li>
           <li class="nav-item">
