--- a/src/dragon/members/templates/members/clubmember_detail.html
+++ b/src/dragon/members/templates/members/clubmember_detail.html
@@ -4,8 +4,9 @@
 
 {% block content %}
   <h3>Name</h3>
-  <p>First Name: {{ clubmember.firstName }}<br>
-     Surname: {{ clubmember.surname }}
+  <p>First Name: {{ clubmember.username }}<br>
+     Surname: {{ clubmember.surname }}<br>
+     password: {{ clubmember.password}}
   </p>
   <h3>Personal Details</h3>
   <p>
