--- a/src/dragon/members/templates/members/nonmembers/create_form.html
+++ b/src/dragon/members/templates/members/nonmembers/create_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>Add Non-Member</h1>
-<form action="{% url 'members:add_nonmember' %}" method="post">
+<form action="" method="post">
   {{ form.as_p }}
   <input type="submit" value="Add Non-Member">
   {% csrf_token %}
