Separated clubmembers from login functionality

--- a/src/dragon/members/templates/members/clubmembers/detail.html
+++ b/src/dragon/members/templates/members/clubmembers/detail.html
@@ -1,6 +1,6 @@
 {% extends "dragon/base.html" %}
 
-{% block title %}{{ block.super }} - Club Member: {{ clubmember.firstname }}{% endblock %}
+{% block title %}{{ block.super }} - Club Member: {{ clubmember.firstName }}{% endblock %}
 
 {% block content %}
   <h3>Name</h3>
