--- a/src/dragon/members/templates/members/signin.html
+++ b/src/dragon/members/templates/members/signin.html
@@ -4,23 +4,23 @@
 
 {% block content %}
 <div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100 p-b-160 p-t-50">
-            <span class="login100-form-title p-b-43">
-						Account Login
-            </span>
-            <form action="" method="post">
-                {% csrf_token %}
-                <input type="text" name="username" placeholder="firstName"><br>
-                <input type="password" name="password" placeholder="password"><br>
-                <input type = "Submit"> 
-            </form>
-            <div>
-                {% for message in messages %}
-                    <h3> {{message}} </h3>
-                {% endfor %}
-            </div>
-        </div>
+  <div class="container-login100">
+    <div class="wrap-login100 p-b-160 p-t-50">
+    <span class="login100-form-title p-b-43">
+      <h4>Sign In</h4>
+    </span>
+    <form action="" method="post">
+      {% csrf_token %}
+      <input type="text" name="username" placeholder="Username"><br>
+      <input type="password" name="password" placeholder="Password"><br>
+      <input type = "Submit"> 
+    </form>
+    <div>
+      {% for message in messages %}
+        <h3> {{message}} </h3>
+      {% endfor %}
+    </div>
+  </div>
 </div>
     
                          
