Changed title for sign-in page

--- a/src/dragon/members/templates/members/signin.html
+++ b/src/dragon/members/templates/members/signin.html
@@ -1,6 +1,6 @@
 {% extends "dragon/base.html" %}
 
-{% block title %}{{ block.super }} Admin Register{% endblock %}
+{% block title %}{{ block.super }} - Sign In{% endblock %}
 
 {% block content %}
 <div class="limiter">
