--- a/src/dragon/dragon/templates/dragon/base.html
+++ b/src/dragon/dragon/templates/dragon/base.html
@@ -68,7 +68,7 @@
         </li>
         {# Login/out for mobile #}
         <li class="nav-item">
-          <div class="d-md-hidden">
+          <div class="d-md-none">
             {% if user.is_authenticated %}
             <a class="text-center text-md-left nav-link" href="/members/signout">SIGNOUT</a>
             {% else %}
