--- a/src/dragon/members/templates/members/signin.html
+++ b/src/dragon/members/templates/members/signin.html
@@ -11,7 +11,7 @@
             </span>
             <form action="" method="post">
                 {% csrf_token %}
-                <input type="text" name="username" placeholder="firstName" value="{{ clubmember.username }}"><br>
+                <input type="text" name="FirstName" placeholder="FirstName" value="{{ clubmember.FirstName }}"><br>
                 <input type="password" name="password" placeholder="password" value="{{ clubmember.username }}"><br>
                 <input type = "Submit"> 
             </form>
