--- a/src/dragon/dragon/templates/dragon/index.html
+++ b/src/dragon/dragon/templates/dragon/index.html
@@ -5,50 +5,24 @@
 {% block content %}
     <h1>Welcome to UniGames</h1>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eleifend est magna, at interdum mi condimentum at.
-        Etiam elementum, quam nec laoreet dapibus, magna arcu fringilla est, condimentum bibendum erat elit nec neque.
-        Donec quis sollicitudin quam. In hac habitasse platea dictumst. Fusce hendrerit lacinia sagittis. Nulla molestie
-        eros felis, sit amet tempor justo efficitur a. Vivamus aliquam justo sit amet efficitur fermentum. Fusce mattis,
-        turpis ut venenatis pharetra, mi eros tristique leo, et fringilla erat est id est. Curabitur at ligula nec lacus
-        ullamcorper bibendum quis ac metus. Mauris finibus dapibus semper. Vivamus ac molestie purus, ut scelerisque
-        odio. Morbi eu bibendum justo. Donec id sem maximus, vulputate turpis commodo, egestas orci. Nulla blandit
-        bibendum tellus, in accumsan turpis pellentesque sit amet.
+        Unigames is the table-top gaming club at the University of Western Australia. We do roleplaying, wargaming, 
+        board and card gaming and indeed gaming in all forms (except video games, try next door at <a href ="">UCC</a> 
+        for that). Whether it's D&D, Magic the Gathering, Warhammer 40K, or any of our dozens of other systems and 
+        games, we've got you covered. We also have some chess sets, Mahjong, and at least 2 sets of Monopoly just in 
+        case. Check out our <a href="">Library</a>.
     </p>
     <p>
-        Phasellus at lobortis mi. Curabitur molestie tristique nunc in fringilla. Phasellus mollis, leo sit amet porta
-        maximus, nibh odio finibus orci, sit amet fringilla orci massa vel ligula. Sed facilisis tincidunt venenatis. In
-        sagittis semper pharetra. Nullam fermentum elit pulvinar lacus laoreet luctus. Donec tincidunt vitae dui sit
-        amet
-        semper. Aliquam id orci luctus, interdum velit a, efficitur erat. Aenean finibus est non odio fermentum dictum.
-        Donec ac quam venenatis lorem sollicitudin mollis vitae ac diam.
+        Membership costs $5 per year for Guild Members (but $7 for everyone else) and entitles you to vote at the 
+        annual committee elections, join one of our many long-running campaigns, borrow our books and games, and 
+        receive a 10% discount when you buy from our generous sponsor Tactics. We also keep a well stocked fidge in 
+        our clubroom for all your mid-game snacking needs. Our snacks are some of the cheapest on campus!
     </p>
     <p>
-        Nullam et justo ac augue luctus porttitor. In accumsan, dui at feugiat euismod, nisl eros venenatis tortor, vel
-        condimentum sem augue sagittis turpis. Duis sem arcu, venenatis nec semper et, condimentum sit amet dolor. Nulla
-        id
-        nulla pharetra, congue dolor nec, pellentesque purus. Donec semper condimentum nisl, at euismod eros laoreet a.
-        Vivamus finibus, mi in sollicitudin fermentum, urna urna luctus elit, posuere mattis augue velit a augue. Duis
-        ullamcorper scelerisque molestie. Nunc et metus egestas, aliquet dui condimentum, accumsan eros.
+        The clubroom is currently located on the top level of Cameron Hall, which is above the Tavern. 
+        Ask for directions at the Guild Student Centre (ground floor in Guild Village).
     </p>
     <p>
-        Pellentesque euismod velit sit amet ipsum rhoncus condimentum. Nulla et iaculis velit. Nulla malesuada neque id
-        nisl
-        tempus, vel finibus orci vestibulum. Pellentesque et urna sem. Cras euismod porttitor commodo. Curabitur
-        condimentum
-        elementum sapien in vulputate. Cras tempor pulvinar nibh, nec commodo nulla egestas id. Praesent risus dolor,
-        sagittis sed diam quis, tincidunt dapibus ex. Integer suscipit at lorem sit amet ultricies. Etiam ut elit
-        efficitur,
-        rutrum odio in, mattis purus.
-    </p>
-    <p>
-        Vestibulum a ante vitae odio tristique blandit. Duis ornare tortor non dolor elementum, quis ullamcorper risus
-        varius. Nunc quis condimentum massa. Etiam massa diam, tempus sit amet enim at, aliquet ultricies nulla. Nullam
-        at
-        gravida augue. In posuere blandit felis eu lacinia. Maecenas rutrum mauris efficitur ante volutpat, sit amet
-        ornare
-        odio lacinia. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam sit
-        amet
-        tristique nunc. Mauris a porta urna. Curabitur fringilla, lectus id convallis sollicitudin, ipsum dolor pretium
-        eros, vitae convallis tortor nisl non dolor. Cras condimentum ornare tortor a maximus. Nullam imperdiet
+        A good place to start looking for information is the <a href="">Frequently Asked Questions</a>. 
+        Otherwise, pick something interesting from the menu on the right!
     </p>
 {% endblock %}
