Added link to committee.html

--- a/src/dragon/dragon/templates/dragon/committee.html
+++ b/src/dragon/dragon/templates/dragon/committee.html
@@ -51,8 +51,8 @@
     </p>
 
     <p>
-        To contact committee, email to uwaunigames@gmail.com.
-        <br>Alternatively, email to unigames-owner@ucc.gu.uwa.edu.au.
+        To contact committee, email to <a href="mailto:uwaunigames@gmail.com">uwaunigames@gmail.com</a>.
+        <br>Alternatively, email to <a href="mailto:unigames-owner@ucc.gu.uwa.edu.au">unigames-owner@ucc.gu.uwa.edu.au</a>.
     </p>
 
     <p>
