Added link to contact-us.html

--- a/src/dragon/dragon/templates/dragon/contact-us.html
+++ b/src/dragon/dragon/templates/dragon/contact-us.html
@@ -10,7 +10,7 @@
 
     <p>
         By far the most popular way for club members to stay in touch electronically is though the club Facebook 
-        group. <a href="">Join it today</a>!
+        group. <a href="https://www.facebook.com/groups/uwa.unigames/">Join it today</a>!
         <br>The Facebook group is intended for club members: it is a great place to discuss your games, recruit 
         players, and generally chat. All events are publicised though this group (though not necessarily exclusively).    
     </p>
@@ -18,7 +18,8 @@
     <h2>Email us</h2>
 
     <p>
-        To contact us with any questions or comments please email: <a href="">uwaunigames@gmail.com</a>.
+        To contact us with any questions or comments please email: 
+        <a href="mailto:uwaunigames@gmail.com">uwaunigames@gmail.com</a>.
     </p>
 
     <h2>The Unigames Mailing List</h2>
@@ -30,9 +31,11 @@
     </p>
     
     <ul>
-        <li><em>No-frills Method</em><br>Send an email to <strong>unigames@ucc.gu.uwa.edu.au</strong> with just the 
+        <li><em>No-frills Method</em>
+        <br>Send an email to <strong>unigames@ucc.gu.uwa.edu.au</strong> with just the 
         word "subscribe" (again, no brackets) in the subject or body. Well done.</li>
-        <li><em>WWW Method</em><br>Visit our <a href="">online subscription manager.</a></li>
+        <li><em>WWW Method</em><br>Visit our 
+        <a href="http://lists.ucc.gu.uwa.edu.au/mailman/listinfo/unigames">online subscription manager.</a></li>
     </ul>
 
 {% endblock %}
