Added link to faq.html

--- a/src/dragon/dragon/templates/dragon/faq.html
+++ b/src/dragon/dragon/templates/dragon/faq.html
@@ -18,9 +18,9 @@
     <h2>What can I do at Unigames</h2>
 
     <p>
-        Play games! There are many roleplaying campaigns in action at the moment, held either weekly or fortnightly. 
-        Popular roleplaying systems at the moment include D&D (5th, 4th and Pathfinder are most common), Dark Heresy 
-        (and family), nWoD, and Ad Eva 3.5 (giant robots!).
+        Play games! There are many <a href="{% url 'roleplaying' %}">roleplaying</a> campaigns in action at the 
+        moment, held either weekly or fortnightly. Popular roleplaying systems at the moment include D&D (5th, 4th 
+        and Pathfinder are most common), Dark Heresy (and family), nWoD, and Ad Eva 3.5 (giant robots!).
     </p>
     <p>    
         For the non-roleplayers, if you pick the right moment it's usually possible to tap the boundless energy of 
@@ -34,12 +34,12 @@
     <h2>Where is the Unigames clubroom?</h2>
 
     <p>
-        (The following directions are cheerfully borrowed from UniSFA.) For a start, Unigames is located above the 
-        UWA (35 Stirling Hwy, Crawley) Tavern. If you don't know where that is, just ask anyone you can find, 
-        wandering anywhere on campus. From standing in front of the Tavern, facing the Tavern, walk left and follow 
-        the Tavern's fence around the corner. Keep wandering around this wall of the Tavern until you hit an inset 
-        in the wall. The door facing away from the river is the entrance to all the higher parts of Cameron Hall. 
-        If that doesn't help, you can also follow this 
+        (The following directions are cheerfully borrowed from <a href="http://unisfa.gu.uwa.edu.au">UniSFA</a>.) 
+        For a start, Unigames is located above the UWA (35 Stirling Hwy, Crawley) Tavern. If you don't know where 
+        that is, just ask anyone you can find, wandering anywhere on campus. From standing in front of the Tavern, 
+        facing the Tavern, walk left and follow the Tavern's fence around the corner. Keep wandering around this 
+        wall of the Tavern until you hit an inset in the wall. The door facing away from the river is the entrance 
+        to all the higher parts of Cameron Hall. If that doesn't help, you can also follow this 
         <a href="https://www.youtube.com/watch?v=V5BTEKh21mA&feature=youtu.be">handy video from our 2018 President 
         Gavin</a>.
     </p>
