Added link to roleplaying.html

--- a/src/dragon/dragon/templates/dragon/roleplaying.html
+++ b/src/dragon/dragon/templates/dragon/roleplaying.html
@@ -77,7 +77,7 @@
 
     <p>
         If you want to know more, come up to the clubroom, send the committee an email, or post to the 
-        <a href="">mailing list or facebook</a>.
+        <a href="{% url 'contact-us' %}">mailing list or facebook</a>.
     </p>
 
 {% endblock %}
